--- a/src/main/resources/launchConfig.properties
+++ b/src/main/resources/launchConfig.properties
@@ -1,14 +1,14 @@
-#weasis-manager.server.url
-svr=${weasisManagerServerUrl}
+#viewer-hub.server.url
+svr=${viewerHubServerUrl}
 
 #weasis.codebase.url
-cdb=${weasisManagerServerUrl}/weasis/package/${packageVersion!}
+cdb=${viewerHubServerUrl}/weasis/package/${packageVersion!}
 
 #felix.config.properties
-cfg =${weasisManagerServerUrl}/overrideConfig/properties?packageVersionId=${packageVersionId!}&amp;launchConfigId=${launchConfigId!}&amp;groupId=${groupId!}
+cfg =${viewerHubServerUrl}/overrideConfig/properties?packageVersionId=${packageVersionId!}&amp;launchConfigId=${launchConfigId!}&amp;groupId=${groupId!}
 
 property_gosh.args=-sc telnetd -p 17179 start
 property_apple.laf.useScreenMenuBar   =true
 property_weasis.help.url=http://example.org/Weasis
-property_weasis.pref.url=${weasisManagerServerUrl}/weasisconfig/ws/preferences
+property_weasis.pref.url=${viewerHubServerUrl}/weasisconfig/ws/preferences
 
