feat: renaming to viewer-hub

--- a/src/main/resources/launchConfig.properties
+++ b/src/main/resources/launchConfig.properties
@@ -9,6 +9,6 @@ cfg =${viewerHubServerUrl}/overrideConfig/properties?packageVersionId=${packageV
 
 property_gosh.args=-sc telnetd -p 17179 start
 property_apple.laf.useScreenMenuBar   =true
-property_weasis.help.url=http://example.org/Weasis
+property_weasis.help.url=https://weasis.org/en/index.html
 property_weasis.pref.url=${viewerHubServerUrl}/weasisconfig/ws/preferences
 
