--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -2,15 +2,15 @@
 services:
 
   # Postgres SQL
-  weasis-manager-db:
+  viewer-hub-db:
     image: postgres:17-alpine
-    container_name:  weasis-manager_db
+    container_name:  viewer-hub_db
     ports:
       - "45101:5432"
 
   # Redis Cache
-  weasis-manager-cache:
-    container_name: weasis-manager_cache
+  viewer-hub-cache:
+    container_name: viewer-hub_cache
     image: redis:7
     ports:
       - "6379:6379"
@@ -18,7 +18,7 @@ services:
   # Minio for using S3 cloud storage API minio:latest
   minio-storage:
     image: minio/minio:RELEASE.2024-10-29T16-01-48Z
-    container_name: weasis-manager_minio
+    container_name: viewer-hub_minio
     command: server --console-address ":9090" /resources
     ports:
       - "9080:9000"
