--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -90,13 +90,13 @@ viewer-hub:
   # - Resources package in s3
   resources-packages:
     weasis:
-      path: '${weasis-manager.resources-packages.path}/weasis'
+      path: '${viewer-hub.resources-packages.path}/weasis'
       package:
-        path: '${weasis-manager.resources-packages.path}/weasis/package'
+        path: '${viewer-hub.resources-packages.path}/weasis/package'
       i18n:
-        path: '${weasis-manager.resources-packages.path}/weasis/i18n'
+        path: '${viewer-hub.resources-packages.path}/weasis/i18n'
       mapping-minimal-version:
-        path: '${weasis-manager.resources-packages.path}/weasis/mapping-minimal-version.json'
+        path: '${viewer-hub.resources-packages.path}/weasis/mapping-minimal-version.json'
 
 server:
 # Enable response compression: currently not working
