fix: path resources package should not start with "/" => S3 objects prefix

--- a/docker/config-server/application-package.yml
+++ b/docker/config-server/application-package.yml
@@ -1,7 +1,8 @@
 # - Viewer Hub
 viewer-hub:
   resources-packages:
-    path: /resources/packages
+    # - Prefix used to store objects in S3 bucket: should not start by "/"
+    path: resources/packages
 
 #  - Weasis
 weasis:
